--- a/app/(app)/(index)/_components/social-link-list.module.css
+++ b/app/(app)/(index)/_components/social-link-list.module.css
@@ -3,6 +3,11 @@
 		:where(:scope) {
 			display: flex;
 			column-gap: var(--size-32);
+			list-style: none;
+		}
+
+		.listItem {
+			display: flex;
 		}
 
 		.item {
@@ -11,10 +16,16 @@
 			margin: calc(var(--size-8) * -1);
 			color: var(--accent-11);
 			border-radius: var(--radius-md);
+			outline: none;
 
 			&:hover {
 				color: var(--accent-12);
 				background-color: var(--accent-3);
+			}
+
+			&:focus-visible {
+				outline: var(--accent-5) solid var(--size-3);
+				outline-offset: var(--size-3);
 			}
 		}
 	}
